Fix tabs scrollbar

--- a/src/app/builder/components/layout/Tabs.less
+++ b/src/app/builder/components/layout/Tabs.less
@@ -54,6 +54,8 @@
       position: relative;
       
       display: flex;
+      
+      
 		}
 
 		.tabs-title {
@@ -222,6 +224,10 @@
     overflow-x: auto;
     overflow-y: hidden;
     
+    &::-webkit-scrollbar {
+      height: 6px;
+    }
+
     
     &::-webkit-scrollbar-track {
       background: lighten(@font-color, 18%);
